--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -24,17 +24,6 @@
     <div id="video">
         <canvas id="meinRechteckCanvas"></canvas>
     </div>
-    <!-- Test -->
-    <div id="mainContainer">
-      <!-- Dies ist der Code für die Aufgabe -->
-      <div id="div1" class="drumpad"></div>
-      <div id="div2" class="drumpad"></div>
-      <div id="div3" class="drumpad"></div>
-      <div id="div4" class="drumpad"></div>
-      <script src="soundPlayback.js"></script>
-      <!--------------------------------------->
-  </div>
-  <!-- Test ende -->
     <div id="instrument">
             <p>Instrument</p>
         </div>
@@ -45,7 +34,7 @@
       <a class="mute">Mute</a>
     </div>
     <input type="range" min="0" max="100" value="100" class="slider" id="gainSlider"> 
-    <!-- <script type="text/javascript" src="../JS/webAudioScript.js"></script> -->
+    <script type="text/javascript" src="../JS/webAudioScript.js"></script>
     <div onload="initialize()"></div>
   </body>
 </html>
