added y-axis functionality
9 loops playable in 30px steps

--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -34,7 +34,7 @@
       <a class="mute">Mute</a>
     </div>
     <input type="range" min="0" max="100" value="100" class="slider" id="gainSlider"> 
-    <script type="text/javascript" src="../JS/webAudioScript.js"></script>
+    <!-- <script type="text/javascript" src="../JS/webAudioScript.js"></script> -->
     <div onload="initialize()"></div>
   </body>
 </html>
