--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../CSS/stylesheet.css"/>
-    <!-- <script type="text/javascript" src="../JS/webAudioScript.js"></script> -->
     <script type="text/javascript" src="../JS/midi.js"></script>
     <title>Color Band</title>
   </head>
@@ -13,7 +12,7 @@
     <h1 id="title">Color Band - AVPRG Projekt</h1>
     <!-- Buttons -->
     <div id="buttons">
-        <button class="button" id="save" onclick="saveFrequencyAndGain()">Instrument Speichern</button>
+        <button class="button" id="save" onclick="saveSounds()">Instrument Speichern</button>
         <br>
         <button class="button" id="reset" onclick="reset()">Reset</button>
         <br>
@@ -34,7 +33,6 @@
       <a class="mute">Mute</a>
     </div>
     <input type="range" min="0" max="100" value="100" class="slider" id="gainSlider"> 
-    <!-- <script type="text/javascript" src="../JS/webAudioScript.js"></script> -->
     <div onload="initialize()"></div>
   </body>
 </html>
