added delete function
functionalities need to be tested

--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -16,7 +16,7 @@
         <br>
         <button class="button" id="reset" onclick="reset()">Reset</button>
         <br>
-        <button class="button" id="back" onclick="back()">Schritt zurück</button>
+        <button class="button" id="back" onclick="revertSavedSound()">Schritt zurück</button>
     </div>
     <!-- Video -->
     <!-- Muss mit Videobild ausgetauscht werden.  -->
