all functions are working fine
-all needed functions are working
-need to fix sound problem

--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -14,7 +14,7 @@
     <div id="buttons">
         <button class="button" id="save" onclick="saveSounds()">Instrument Speichern</button>
         <br>
-        <button class="button" id="reset" onclick="reset()">Reset</button>
+        <button class="button" id="reset" onclick="clearSoundArray()">Reset</button>
         <br>
         <button class="button" id="back" onclick="revertSavedSound()">Schritt zurück</button>
     </div>
