--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -25,14 +25,12 @@
     </div>
     <div id="instrument">
             <p>Instrument</p>
-        </div>
+    </div>
+    <div id="lautstaerke">
+      <p>Lautstaerke</p>
+    </div>
     <!-- Filter Hinweise -->
     <script type="text/javascript" src="../JS/functions.js"></script>
-    <button onclick="test()">Play Me</button>
-    <div>
-      <a class="mute">Mute</a>
-    </div>
-    <input type="range" min="0" max="100" value="100" class="slider" id="gainSlider"> 
     <div onload="initialize()"></div>
   </body>
 </html>
