small style changes

--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -23,10 +23,10 @@
           <canvas id="meinRechteckCanvas"></canvas>
       </div>
       <div id="instrument">
-              <p>Instrument</p>
+              <p>Instrumente</p>
       </div>
       <div id="lautstaerke">
-        <p>Lautstaerke</p>
+        <p>Lautstärke</p>
       </div>
 
     <!-- Filter Hinweise -->
