changed code structure, deleted obsolete files

--- a/Frontend/HTML/index.html
+++ b/Frontend/HTML/index.html
@@ -30,9 +30,12 @@
       </div>
 
     <!-- Filter Hinweise -->
-    <script type="text/javascript" src="../JS/midi.js"></script>
+    <script type="text/javascript" src="../JS/variables.js"></script>
 
     <script type="text/javascript" src="../JS/functions.js"></script>
+
+    <script type="text/javascript" src="../JS/midi.js"></script>
+
     <div onload="initialize()"></div>
   </body>
 </html>
